# caffeine-gl

./: .gitmodules  CMakeLists.txt  LICENSE
include/caffeine-gl/: base.h
include/caffeine-gl/game/: BallClass.h  Game.h  GameLevel.h  GameObject.h  Hitbox.h  Transform.h
include/caffeine-gl/gfx/: ParticleGenerator.h  ResourceManager.h  Texture.h
include/glad/: glad.h
include/glm/: CMakeLists.txt  common.hpp  exponential.hpp  geometric.hpp  glm.hpp  integer.hpp  mat2x2.hpp  mat2x3.hpp  mat2x4.hpp  mat3x2.hpp  mat3x3.hpp  mat3x4.hpp  mat4x2.hpp  mat4x3.hpp  mat4x4.hpp  matrix.hpp  packing.hpp  trigonometric.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vector_relational.hpp
include/glm/detail/: func_common.inl  func_exponential.inl  func_packing.inl  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_quat.hpp  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp
include/glm/ext/: matrix_clip_space.hpp  matrix_double2x2.hpp  matrix_double2x2_precision.hpp  matrix_double2x3.hpp  matrix_double2x3_precision.hpp  matrix_double2x4.hpp  matrix_double2x4_precision.hpp  matrix_double3x2.hpp  matrix_double3x2_precision.hpp  matrix_double3x3.hpp  matrix_double3x3_precision.hpp  matrix_double3x4.hpp  matrix_double3x4_precision.hpp  matrix_double4x2.hpp  matrix_double4x2_precision.hpp  matrix_double4x3.hpp  matrix_double4x3_precision.hpp  matrix_double4x4.hpp  matrix_double4x4_precision.hpp  matrix_float2x2.hpp  matrix_float2x2_precision.hpp  matrix_float2x3.hpp  matrix_float2x3_precision.hpp  matrix_float2x4.hpp  matrix_float2x4_precision.hpp  matrix_float3x2.hpp  matrix_float3x2_precision.hpp  matrix_float3x3.hpp  matrix_float3x3_precision.hpp  matrix_float3x4.hpp  matrix_float3x4_precision.hpp  matrix_float4x2.hpp  matrix_float4x2_precision.hpp  matrix_float4x3.hpp  matrix_float4x3_precision.hpp  matrix_float4x4.hpp  matrix_float4x4_precision.hpp  matrix_projection.hpp  matrix_transform.hpp  quaternion_common.hpp  (+50 more)
include/glm/gtc/: constants.hpp  epsilon.hpp  matrix_transform.hpp  quaternion.hpp  type_ptr.hpp  vec1.hpp
src/: glad.c
src/game/: BallClass.cpp  Game.cpp  Game.h  GameLevel.cpp  GameLevel.h  GameObject.cpp  GameObject.h
src/gfx/: ParticleGenerator.cpp  ParticleGenerator.h  ResourceManager.cpp  Shader.cpp  Shader.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.cpp  stb.cpp
